objects/ssot__JobPostingSearchableField__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DepartmentName__c</fullName>
        <label>Department Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Job Posting Searchable Field Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JobPostingPayRange__c</fullName>
        <label>Job Posting Pay Range</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationName__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccupationGroupId__c</fullName>
        <label>Occupation Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccupationGroupName__c</fullName>
        <label>Occupation Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccupationId__c</fullName>
        <label>Occupation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccupationName__c</fullName>
        <label>Occupation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PositionDescription__c</fullName>
        <label>Position Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PositionSensitivity__c</fullName>
        <label>Position Sensitivity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PositionStatus__c</fullName>
        <label>Position Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PositionTitleText__c</fullName>
        <label>Position Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PositionType__c</fullName>
        <label>Position Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentPostingId__c</fullName>
        <label>Recruitment Posting</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentPostingName__c</fullName>
        <label>Recruitment Posting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentRequisitionId__c</fullName>
        <label>Recruitment Requisition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequisitionIdentifier__c</fullName>
        <label>Requisition Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueKeyText__c</fullName>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VacancyCount__c</fullName>
        <label>Vacancy Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WorkScheduleType__c</fullName>
        <label>Work Schedule Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334817916_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobPostingSearchableField_Recruitmen_rel</label>
        <referenceTo>ssot__RecruitmentRequisition__dlm</referenceTo>
        <relationshipLabel>JobPostingSearchableField_Recruitmen_rel</relationshipLabel>
        <relationshipName>rel_1741334817916_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334820490_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobPostingSearchableField_Occupation_rel</label>
        <referenceTo>ssot__Occupation__dlm</referenceTo>
        <relationshipLabel>JobPostingSearchableField_Occupation_rel</relationshipLabel>
        <relationshipName>rel_1741334820490_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334826753_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobPostingSearchableField_LocationId_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>JobPostingSearchableField_LocationId_rel</relationshipLabel>
        <relationshipName>rel_1741334826753_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>